# argus

./: .dockerignore  .gitignore  AGENTS.md  CHANGELOG.md  Dockerfile  PRIVACY.md  README.md  SECURITY.md  glama.json  llms-install.md  pyproject.toml  server.json
.github/workflows/: ci.yml  release.yml
argus/: __init__.py  browser.py  cli.py  config.py  detector.py  differ.py  explorer.py  mcp_server.py  models.py  planner.py  reporter.py  resolver.py
argus/bench/: __main__.py  agent_runner.py  live.py  runner.py  scenarios_buggytasks.py  scenarios_darkshop.py
argus/screen/: backend.py  permissions.py  safety.py  validate.py
bench-results/: buggytasks.json  buggytasks.md  darkshop.json  darkshop.md  matrix.json  matrix.md  screen_validation.json
docs/: FIXTURE_CONVENTION.md
examples/: focus.yaml  mcp-config.json
human-eye-fixture/: app.py
test-site/: app.py
tests/: conftest.py  test_action_targeting.py  test_bench_report.py  test_browser_shadow.py  test_cross_stack.py  test_detector_console.py  test_detector_network.py  test_expectation_oracle.py  test_final_hardening.py  test_journal_regression.py  test_live_bench.py  test_mcp_contract.py  test_regression_cli.py  test_release_metadata.py  test_replay_minimize.py  test_replay_receipt.py  test_replay_trace.py  test_reporter_badge.py  test_reproduction_receipt.py  test_resolver.py  test_screen_permissions.py  test_screen_safety.py  test_session_lifecycle.py  test_state_capsules.py  test_substrate.py  test_visual_inspection.py
