[project]
name = "argus-testing"
version = "0.5.0"
description = "AI-powered exploratory testing agent that discovers bugs like a real user"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [{name = "Yichen Wu", email = "yichenwujob@gmail.com"}]
urls = {Homepage = "https://github.com/chriswu727/argus", Repository = "https://github.com/chriswu727/argus"}
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Testing",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
]
keywords = ["testing", "qa", "ai", "playwright", "agent", "exploratory-testing", "mcp", "claude-code"]
dependencies = [
    "playwright>=1.40.0",
    "litellm>=1.40.0",
    "mcp[cli]>=1.0.0",
    "click>=8.0.0",
    "pydantic>=2.0.0",
    "pyyaml>=6.0",
    "rich>=13.0.0",
    "jinja2>=3.0.0",
    "Pillow>=10.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
]
mac = [
    # Screen mode — installed only on macOS.
    "pyobjc-framework-Cocoa>=10.0; sys_platform == 'darwin'",
    "pyobjc-framework-Quartz>=10.0; sys_platform == 'darwin'",
    "pyobjc-framework-ApplicationServices>=10.0; sys_platform == 'darwin'",
]

[project.scripts]
argus = "argus.cli:main"
argus-mcp = "argus.mcp_server:main"
argus-regression = "argus.cli:regression"

[tool.hatch.build.targets.wheel]
packages = ["argus"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
